--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -12,9 +12,12 @@ services:
       - ELASTICSEARCH_PORT=9200
       - RABBITMQ_HOST=rabbitmq
     depends_on:
-      - elasticsearch
-      - rabbitmq
-
+      elasticsearch:
+        condition: service_healthy
+    command: >
+      sh -c "python scripts/setup_elasticsearch.py &&
+             uvicorn app.main:app --host 0.0.0.0 --port 8000"
+             
   frontend:
     build:
       context: ./frontend
